--- a/templates/error.tmpl
+++ b/templates/error.tmpl
@@ -3,7 +3,7 @@
   </head>
   <body>
     <ul>
-      <p>Total: {{ .err_msg }}</p>
+      <p>Total: |< .err_msg >|</p>
     </ul>
   </body>
 </html>
