--- a/templates/roll.tmpl
+++ b/templates/roll.tmpl
@@ -5,7 +5,7 @@
   <body class="prevent-transitions">
     <div id="body" class="page">
       |< template "header" >|
-      <div class="fancy-box">
+      <div class="page-box">
         <p>Sequence ID: |< .SeqID >|</p>
         <ul>
           |< range $i, $roll := .Result.Rolls >|
