--- a/static/shared.css
+++ b/static/shared.css
@@ -218,7 +218,7 @@ a {
   padding: 20px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 .die-and-value {
   display: block;
