--- a/templates/error.tmpl
+++ b/templates/error.tmpl
@@ -4,7 +4,7 @@
   </head>
   <body>
     <ul>
-      <p>Total: |< .err_msg >|</p>
+      <p>Error: |{ .err_msg }|</p>
     </ul>
   </body>
 </html>
