--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,4 +1,4 @@
-|< define "header" >|
+|{ define "header" }|
 <div class="header">
   <div class="header-label header-line1a">ROLL:</div>
   <input id="header-input" name="roll_request" type="text" class="roll-input header-line1b hover-underline" placeholder="1d20" />
@@ -29,4 +29,4 @@
   <a class="header-line2c-above header-link hover-underline" href="https://github.com/w8kerr/ddroller">◈Source</a>
   <div class="header-line2c-below header-label">GITHUB</div>
 </div>
-|< end >|
+|{ end }|
