Angularize roll list
Write AngularJS controller for roll list
Hook up some data bindings
Fix broken header

--- a/templates/roll_list.tmpl
+++ b/templates/roll_list.tmpl
@@ -2,8 +2,8 @@
 <html ng-app="ddrollerApp">
   <head>
     <link rel="stylesheet" type="text/css" href="/static/shared.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-route.js"></script>
     <script type="text/javascript" src="/static/controller/roll_list.js"></script>
   <body class="prevent-transitions">
     |{ template "header" }|
